--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub
         with:
           push: true
-          tags: setter2000/infra::latest
+          tags: setter2000/infra:latest
 
   deploy:
     runs-on: ubuntu-latest
